Switch badges for rockets and fix linters

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "redux-logger": "^3.0.6",
     "redux-thunk": "^2.4.1",
     "sass": "^1.49.9",
+    "styled-components": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
